--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroui/navbar": "^2.2.9",
     "@heroui/react": "^2.6.14",
+    "@heroui/use-theme": "^2.1.2",
     "@tailwindcss/vite": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
